compiler,exp/apps: tasks that run only on rank 0
Also, update the vanila halide-sar-app (haven't tested it though).

--- a/exp/apps/casper/sar/CMakeLists.txt
+++ b/exp/apps/casper/sar/CMakeLists.txt
@@ -65,3 +65,7 @@ add_dependencies(sarbp.link dft)
 add_custom_target(sarbp.run
   COMMAND ${sarbp_BUILD_DIR}/sarbp
   DEPENDS ${sarbp_BUILD_DIR}/sarbp)
+
+add_custom_target(sarbp.mpirun
+  COMMAND mpirun -n 2 ${sarbp_BUILD_DIR}/sarbp
+  DEPENDS ${sarbp_BUILD_DIR}/sarbp)
